# claude-desktop-mcp-playground

./: .gitignore  BUILD.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  DOCKER_TESTING.md  Dockerfile  Dockerfile.simple  Dockerfile.wine  INSTALLATION_FIXES.md  LICENSE.md  Makefile  PACKAGING.md  README.md  TESTING.md  WINDOWS_INSTALLER_FIX.md  WINDOWS_VM_GUIDE.md  claude_desktop_simplified.json  config.yaml  debug_setup.py  docker-compose.yml  example.env  example_simplified_config.json  import_claude_config.py  install-full.ps1  install-full.sh  package-setup.py  pg  pyproject.toml  requirements.txt  setup-pg-command.ps1  setup-pg-command.sh  test-installation.ps1  test-installation.sh  test_comprehensive.py  uninstall-complete.bat
claude_desktop_mcp/: __init__.py  cli.py  config_manager.py  example_server.py  server_registry.py  setup_wizard.py
docs/: 01-getting-started.md  02-installation.md  03-basic-configuration.md  04-advanced-setup.md  06-agentic-experimentation.md  07-troubleshooting.md  README.md  advanced-setup-md.md  basic-configuration-md.md  cli-reference.md  getting-started-md.md  gui-guide.md  installation-md.md  installation.md  obsidian-quick-reference.md  obsidian-server-update.md  productivity-workflows-md.md  quick-start.md  troubleshooting-md.md  troubleshooting.md
mcp-gui/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
mcp-gui/backend/: api.py
mcp-gui/src/: App.jsx  index.css  main.js  preload.js
mcp-servers/doc-analyzer/: README.md  WORKFLOW_EXAMPLES.md  example_usage.py  launcher.py  pyproject.toml  server.py
mcp-servers/pg-cli-server/: README.md  install.py  launcher.py  launcher_v2.py  pyproject.toml  server.py  simple_test.py  test_pg_execution.py  test_windows_pg.py
mcp-servers/registry-manager/: EXAMPLES.md  README.md  launcher.py  pyproject.toml  server.py
tests/: __init__.py  conftest.py  test_cli.py  test_config_manager.py  test_import_script.py
