[project]
name = "doc-analyzer-mcp"
version = "1.0.0"
description = "MCP server for analyzing MCP documentation and extracting registration information"
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Your Name", email = "email@example.com"}]
dependencies = [
    "mcp>=0.1.0",
    "aiohttp>=3.8.0"
]

[project.scripts]
doc-analyzer = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
