[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pg-cli-mcp-server"
version = "1.0.0"
description = "MCP Server for PG CLI Commands - Allows Claude Desktop to manage MCP servers via pg commands"
authors = [
    {name = "Claude Desktop MCP Playground", email = "noreply@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "mcp>=1.0.0"
]

[project.scripts]
pg-cli-server = "server:main"

[project.urls]
Homepage = "https://github.com/seanpoyner/claude-desktop-mcp-playground"
Repository = "https://github.com/seanpoyner/claude-desktop-mcp-playground"