[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "registry-manager-mcp-server"
version = "1.0.0"
description = "MCP Server for managing custom MCP server registry"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Claude Desktop MCP Playground", email = "noreply@example.com"}
]
keywords = ["mcp", "model-context-protocol", "registry", "server-management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/seanpoyner/claude-desktop-mcp-playground"
Repository = "https://github.com/seanpoyner/claude-desktop-mcp-playground"
Issues = "https://github.com/seanpoyner/claude-desktop-mcp-playground/issues"

[project.scripts]
registry-manager-mcp-server = "server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
